--- a/packet/answers.tex
+++ b/packet/answers.tex
@@ -73,11 +73,46 @@
 \begin{answer}
     \renewcommand{\labelenumi}{(\alph{enumi})} 
     \begin{enumerate}
-        \item Uniform
-        \item Not uniform
-        \item Not uniform
-        \item Uniform
-        \item Not uniform
+        \item Sample space: 
+        \[
+            \{A\diamondsuit, 2\diamondsuit, 3\diamondsuit, \ldots, K\diamondsuit, 
+            A\heartsuit,\ldots,K\heartsuit,
+            A\spadesuit,\ldots,K\spadesuit,
+            A\clubsuit,\ldots,K\clubsuit\}  
+        \]
+        Probability distribution: 
+        \[
+            \left\{\frac{1}{52}, \ldots, \frac{1}{52}\right\} 
+        \]
+        (where $\frac{1}{52}$ is repeated 52 times).
+        \item Sample space:
+        \[
+            \{\text{registered}, \text{not registered}\}
+        \]
+        Probability distribution:
+        \[
+            \{0.95, 0.05\}
+        \]
+    \end{enumerate}
+\end{answer}
+
+\begin{answer}
+    \renewcommand{\labelenumi}{(\alph{enumi})} 
+    \begin{enumerate}
+        \item \textbf{Uniform.} The deck is shuffled, so a card is equally likely 
+        to be in any one place in the deck.
+        \item \textbf{Not uniform.} You are more likely to draw a lower card if 
+        you draw from the beginning of the deck instead of the end.
+        \item \textbf{Not uniform.} Though it fluctuates, weather generally follows 
+        large-scale patterns that depend on the season, latitude and longitude,
+        the air masses present, and so on. This is called climate. The reason 
+        meteoroligists can predict the weather is precisely because it is 
+        not a uniformly random variable.
+        \item \textbf{Uniform.} Every number is equally likely to be rolled.
+        \item \textbf{Not uniform.} In fact, some birthdays are more likely to occur 
+        than others. Summer birthdays are slightly more common, for instance.\footnotemark
+        \footnotetext{You can see a visualization of the probability of each 
+        birthday here: \url{http://thedailyviz.com/2016/09/17/how-common-is-your-birthday-dailyviz/}.}
     \end{enumerate}
 \end{answer}
 
@@ -339,6 +374,14 @@
 
 \begin{answer}
     $3x^2 + 7x - 12$
+\end{answer}
+
+\begin{answer}
+    N/A
+\end{answer}
+
+\begin{answer}
+    N/A
 \end{answer}
 
 \hide{\subsection{Sharing Secrets Using Polynomials}}
