--- a/packet/main.tex
+++ b/packet/main.tex
@@ -28,6 +28,7 @@
 \usepackage{pgfplots}
 \usepackage{xurl}
 \usepackage{pifont}% http://ctan.org/pkg/pifont
+\usepackage{colortbl}
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
 % externalize the figures
@@ -45,8 +46,8 @@
 %comments
 \newcommand{\nsm}[1]{\textcolor{teal}{(NG: #1)}}
 \newcommand{\new}[1]{\textcolor{blue}{#1}}
-% \newcommand{\todo}[1]{\textcolor{red}{#1}}
-\newcommand{\todo}[1]{#1}
+\newcommand{\todo}[1]{\textcolor{red}{#1}}
+% \newcommand{\todo}[1]{#1}
 
 \renewcommand\abstractname{Introduction}
 
@@ -98,11 +99,8 @@ Optional sections are marked with an asterisk (*).
 \section{Probability and Randomness}\label{sec:prob}
 
 In mathematics, the word ``random'' has a more precise meaning than in everyday 
-speech. Something is random if its outcome is governed by some \emph{probability 
-distribution}. 
-\nsm{Arghya: It might be helpful to delve into this a bit more, as some students might not be ready to recognize italicized font as being sort of  hint to the definition.
-Maybe drawing a diagram showing sample space {H,T} on the left, possible values of pdf {1/2, 1/2} on the right and distribution function being an arrow/assignment between the two sides would bring more clarity.}
-\nsm{I can't picture what you're describing; could you share a sketch?}
+speech. Something is random if its outcome is governed by what is called a 
+\emph{probability distribution}. 
 For example, the outcome $c$ of a coin toss is not fixed, but takes 
 on one of the values in the set $\{H, T\}$, where $H$ means heads and $T$ means 
 tails. (This is called the \emph{sample space} of $c$.) We write 
@@ -174,10 +172,6 @@ When a random variable is uniform, we say it is chosen \emph{uniformly at random
 $\sample$. For example, the outcome $c$ of a coin toss can be written as $c \sample 
 \{H, T\}$ to mean that $c$ is sampled uniformly from the set $\{H, T\}$. 
 % \nsm{Link to an external resource instead of explaining everything.}
-\nsm{I use the notation $\sample$ because it is widespread in cryptography. 
-$c \sample S$ has a slightly different meaning than $U(S)$, since it 
-concerns itself with the \emph{variable} $c$ instead of representing 
-a distribution.}
 
 \begin{exercise}
     How would you represent a dice roll using the $\sample$ notation?
@@ -244,7 +238,6 @@ events ($\{2,4,6\}$ or $\{3\}$) instead of overlapping events ($\{2, 4,
 \new{where $d$ is the random variable representing the outcome of the die roll.}
 
 \hfill\\
-\nsm{Moved conditional probability before independence.}
 
 Conditional probability is the probability that something occurs 
 provided that another event occurred. This is written with the symbol 
@@ -274,6 +267,7 @@ An alternate form is
 \nsm{I'm not sure if the explanation that follows is beneficial.}
 \new{Understanding why these equations are true can help us remember them.
 One way to see why they hold is with a Venn diagram:}
+\todo{(See Seyed's comments on Slack.)}
 
 \begin{center}
 \begin{tikzpicture}
@@ -342,10 +336,148 @@ divided by $\Pr[B]$!}
 \new{The difference is the reference frame: in the first diagram, we are in a 
 world in which we make no assumptions: all possibilities are open. In 
 the second, we are using the extra information that $B$ happened to 
-limit the world of possibilities. Let's see a concrete example next.}
+limit the world of possibilities. Let's see some concrete examples next.}
+
+\begin{example}\label{ex:cond-vis}
+    \color{blue} % new
+    Consider the following sample space, where each number is chosen with 
+    equal probability.
+
+    \begin{center}
+    \begin{tikzpicture}
+        \draw(0,0) grid (4,4);
+        \node at (0.5,3.5) {1};
+        \node at (1.5,3.5) {2};
+        \node at (2.5,3.5) {3};
+        \node at (3.5,3.5) {4};
+        \node at (0.5,2.5) {5};
+        \node at (1.5,2.5) {6};
+        \node at (2.5,2.5) {7};
+        \node at (3.5,2.5) {8};
+        \node at (0.5,1.5) {9};
+        \node at (1.5,1.5) {10};
+        \node at (2.5,1.5) {11};
+        \node at (3.5,1.5) {12};
+        \node at (0.5,0.5) {13};
+        \node at (1.5,0.5) {14};
+        \node at (2.5,0.5) {15};
+        \node at (3.5,0.5) {16};
+        \filldraw[pattern=north east lines,opacity=0.5] (2,0) rectangle (4,4);
+    \end{tikzpicture}
+    \end{center}
+
+    % \begin{center}
+    % \newcolumntype{g}{>{\columncolor{lightgray}}c}
+    % \begin{tabular}{|c|c|g|g|}
+    %     \hline
+    %      1 &  2 &  3 &  4\\\hline
+    %      5 &  6 &  7 &  8\\\hline
+    %      9 & 10 & 11 & 12\\\hline
+    %     13 & 14 & 15 & 16\\
+    %     \hline
+    % \end{tabular}
+    % \end{center}
+
+    Throughout, let $B = \{3,4,7,8,11,12,15,16\}$ (the shaded cells).
+    Notice that $\Pr[B] = \frac{8}{16} = \frac{1}{2}$.
+    
+
+    \renewcommand{\labelenumi}{(\alph{enumi})} 
+    \begin{enumerate}
+        \item Suppose $A = \{9,10\}$:
+            \begin{center}
+            \begin{tikzpicture}
+                \draw(0,0) grid (4,4);
+                \node at (0.5,3.5) {1};
+                \node at (1.5,3.5) {2};
+                \node at (2.5,3.5) {3};
+                \node at (3.5,3.5) {4};
+                \node at (0.5,2.5) {5};
+                \node at (1.5,2.5) {6};
+                \node at (2.5,2.5) {7};
+                \node at (3.5,2.5) {8};
+                \node at (0.5,1.5) {9};
+                \node at (1.5,1.5) {10};
+                \node at (2.5,1.5) {11};
+                \node at (3.5,1.5) {12};
+                \node at (0.5,0.5) {13};
+                \node at (1.5,0.5) {14};
+                \node at (2.5,0.5) {15};
+                \node at (3.5,0.5) {16};
+                \filldraw[pattern=north east lines,opacity=0.5] (2,0) rectangle (4,4);
+                \filldraw[pattern=north west lines,opacity=0.5] (0,1) rectangle (2,2);
+            \end{tikzpicture}
+            \end{center}
+
+            Since $A$ and $B$ don't overlap, $\Pr[A \text{ and } B] = 0$. 
+            Then, using Equation~\ref{eqn:conditional_mid}, $\Pr[A \mid B] 
+            = \Pr[A \text{ and } B] \div \Pr[B] = 0 \div \frac{1}{2} = 0$.
+            Using the visual intuition we gained with the Venn diagrams, 
+            we can justify this by saying that $A$ occupies 0 of the space
+            of $B$.
+
+        \item Now let $A = \{10,11\}$:
+            \begin{center}
+            \begin{tikzpicture}
+                \draw(0,0) grid (4,4);
+                \node at (0.5,3.5) {1};
+                \node at (1.5,3.5) {2};
+                \node at (2.5,3.5) {3};
+                \node at (3.5,3.5) {4};
+                \node at (0.5,2.5) {5};
+                \node at (1.5,2.5) {6};
+                \node at (2.5,2.5) {7};
+                \node at (3.5,2.5) {8};
+                \node at (0.5,1.5) {9};
+                \node at (1.5,1.5) {10};
+                \node at (2.5,1.5) {11};
+                \node at (3.5,1.5) {12};
+                \node at (0.5,0.5) {13};
+                \node at (1.5,0.5) {14};
+                \node at (2.5,0.5) {15};
+                \node at (3.5,0.5) {16};
+                \filldraw[pattern=north east lines,opacity=0.5] (2,0) rectangle (4,4);
+                \filldraw[pattern=north west lines,opacity=0.5] (1,1) rectangle (3,2);
+            \end{tikzpicture}
+            \end{center}
+
+            Now exactly one number, 11, is in both $A$ and $B$, so $\Pr[A \text{ and } 
+            B] = \frac{1}{16}$. Thus $\Pr[A \mid B] = \frac{1}{16} \div \frac{1}{2}
+            = \frac{1}{8}$. Visually, we notice that $A$ in fact occupies one-eighth
+            of $B$'s space.
+
+        \item Lastly, let $A = \{11,12\}$:
+            \begin{center}
+            \begin{tikzpicture}
+                \draw(0,0) grid (4,4);
+                \node at (0.5,3.5) {1};
+                \node at (1.5,3.5) {2};
+                \node at (2.5,3.5) {3};
+                \node at (3.5,3.5) {4};
+                \node at (0.5,2.5) {5};
+                \node at (1.5,2.5) {6};
+                \node at (2.5,2.5) {7};
+                \node at (3.5,2.5) {8};
+                \node at (0.5,1.5) {9};
+                \node at (1.5,1.5) {10};
+                \node at (2.5,1.5) {11};
+                \node at (3.5,1.5) {12};
+                \node at (0.5,0.5) {13};
+                \node at (1.5,0.5) {14};
+                \node at (2.5,0.5) {15};
+                \node at (3.5,0.5) {16};
+                \filldraw[pattern=north east lines,opacity=0.5] (2,0) rectangle (4,4);
+                \filldraw[pattern=north west lines,opacity=0.5] (2,1) rectangle (4,2);
+            \end{tikzpicture}
+            \end{center}
+
+            Now $\Pr[A \text{ and } B] = \frac{2}{16} = \frac{1}{8}$, so $\Pr[A \mid B]
+            = \frac{1}{8} \div \frac{1}{2} = \frac{1}{4}$. Again, this makes 
+            sense visually as well, since $A$ occupies one-quarter of $B$.
+    \end{enumerate}
+\end{example}
 
 \begin{example}
-\nsm{Thanks, Seyed, for suggesting this example!}
     Suppose your friend rolls a die without showing you the result.
     You know the probability that they rolled a 3 is $\frac{1}{6}$. Now 
     suppose they tell you, ``I rolled an odd number.'' Using this additional 
@@ -371,8 +503,14 @@ limit the world of possibilities. Let's see a concrete example next.}
     \end{align*}
 \end{example}
 
-In some cases, we have $\Pr[A \mid B]=\Pr[A]$. Intuitively, this means 
-that the probability of $A$ is the same regardless or whether or not $B$
+\begin{exercise}
+    \color{blue} % new
+    Repeat Example~\exref{ex:cond-vis}, calculating $\Pr[B \mid A]$ instead.
+\end{exercise}
+
+In some cases, such as Example~\exref{ex:cond-vis}b, we have $\Pr[A \mid 
+B]=\Pr[A]$. Intuitively, this means 
+that the probability of $A$ is the same regardless of whether or not $B$
 happened. For example, a good coin toss should be independent of the coin 
 used for the toss or the person doing the toss.
 In these cases, we say that $A$ and $B$ are \emph{independent} events, and 
@@ -389,7 +527,7 @@ of two events together to get the probability that both events happen simultaneo
     \emph{and} get heads?
 
     \new{Our first instinct might be to list out all of the possible 
-    combinations of events; for each die roll, there is a tails and a 
+    combinations of events; for each outcome of the roll, there is a tails and a 
     heads option: }
 
     \[
@@ -691,6 +829,8 @@ of achieving the same thing, after all).
 
 
 Here's a visual representation: \nsm{Is this less confusing?}
+\nsm{Seyed: Maybe a matter of taste. I would prefer not having them on top of each other and just having them next to each other. Also, maybe dropping the figure is not a bad idea.}
+\todo{(Check with Mamma/Trevor.)}
 
 \begin{center}
 \pgfdeclarelayer{background}
@@ -836,10 +976,6 @@ Here's a visual representation: \nsm{Is this less confusing?}
     So even though this scheme \emph{can} work for all $s \in \D$, \new{correctness 
     will only hold for certain choices of $s_1$, and we have no control over 
     $s_1$ because it is chosen randomly.} So this scheme is still not correct. 
-    \nsm{@Seyed: You commented that this should be ``for some $s$''
-    instead of ``for all''. I think ``for all'' is correct: for any choice 
-    of $s$, there exists an $s_1$ such that this scheme is valid (let $s_1$ 
-    be a factor of $s$; $s_1$ can be 1 or $s$, so this holds even if $s$ is prime).}
 \end{example}
 
 Even though all the examples above didn't meet correctness, remember that
@@ -864,11 +1000,6 @@ the attacker a share and ask it to give us some information about the
 secret it came from. This should be almost impossible if the scheme is 
 private.
 
-\nsm{Arghya: I think it'd be helpful to describe a mock situation/thought exercise (parallel to the style of Bob and Alice kinda situations) before throwing in such detailed definition of the privacy game; maybe the explanation right after figure 2 can in incorporated in such description. I'm just slightly worried if we just give them this definition without enough motivation it might be somewhat dry and scary to the uninitiated reader of mathematical texts.}
-\nsm{To be fair, this is an optional section so I only expected people 
-who were happy to read a little bit more difficult text and concepts to 
-venture here. But that's no reason to make things drier than they have to be :)
-Here's an attempt.}
 \new{More specifically, the secret sharing \emph{privacy game} captures 
 the following scenario. Alice wants to share some secret $s$ so that she
 can distribute its pieces to her friends. Maybe $s$ is the combination to
@@ -886,8 +1017,8 @@ share number 1, 2, \ldots, $n-1$, or $n$. Once Alice has shared her
 combination among her friends, Eve will see the share $s_i$ (for her choice
 of $i$), which is the result of either $\share(x_0)$ or $\share(x_1)$.}
 
-\new{What sort of protection does Alice need? Even with all her information 
-(her knowledge of $x_0, x_1, i$, and $s_i$), we don't want Eve to figure
+\new{What sort of protection does Alice need? Even with all the information 
+known to Eve (her knowledge of $x_0, x_1, i$, and $s_i$), we don't want her to figure
 out whether she got a share of $x_0$ or $x_1$, because if she did, she'd
 be able to unlock the safe!}
 
@@ -1341,12 +1472,16 @@ between equations and plots clear?}
 \node (point2) at (axis cs: 4,3) {\textbullet};
 \node [above left,font=\small] at (point2) {$(4,3)$};
 % other degree-2 polys through these points
-\addplot[domain=-1:5,samples=50,mark=none,dotted]{-(x^2-4*x+3)+6};
-\addplot[domain=-1:5,samples=50,mark=none,dotted]{x^2/4-x+3};
+%%% BW VERSION %%%%%%
+% \addplot[domain=-1:5,samples=50,mark=none,dotted]{-(x^2-4*x+3)+6};
+% \addplot[domain=-1:5,samples=50,mark=none,dotted]{x^2/4-x+3};
+%%% COLOR VERSION %%%%%
+\addplot[domain=-1:5,samples=50,mark=none,magenta]{-(x^2-4*x+3)+6};
+\addplot[domain=-1:5,samples=50,mark=none,cyan]{x^2/4-x+3};
 \end{axis}
 \node [font=\small] at (8,5) {$f(x)=x^2-4x+3$};
-\node [font=\small] at (8,3.3) {$f(x)=\frac{1}{4}x^2-x+3$};
-\node [font=\small] at (-1,1.3) {$f(x)=-x^2+4x+3$};
+\node [font=\small,magenta] at (-1,1.3) {$f(x)=-x^2+4x+3$};
+\node [font=\small,cyan] at (8,3.3) {$f(x)=\frac{1}{4}x^2-x+3$};
 \end{tikzpicture}
 \end{center}
 
